@@ -307,7 +307,7 @@ data.raw["recipe"]["electric-engine-unit"].ingredients =
 {
   PM.ingredient("pm-basic-wiring", 10),
   PM.ingredient("advanced-circuit", 2),
-  PM.ingredient("pm-solid-lubricant", 10),
+  PM.ingredient("pm-solid-lubricant", 8),
   PM.ingredient("engine-unit", 1),
   PM.ingredient("pm-kasethal-plate", 4)
 }
